k8s/liquid-voting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liquid-voting-deployment
  labels:
    app: liquid-voting
spec:
  replicas: 3
  selector:
    matchLabels:
      app: liquid-voting
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 34%
      maxUnavailable: 34%
  template:
    metadata:
      name: liquid-voting
      labels:
        app: liquid-voting
    spec:
      containers:
      - name: liquid-voting
        image: docker.pkg.github.com/oliverbarnes/liquid-voting-service/liquid-voting-service:latest
        imagePullPolicy: Always
        resources: {}
        securityContext:
          privileged: false
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
