k8s/liquid-voting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liquid-voting
spec:
  clusterIP: None
  selector:
    app: liquid-voting
  ports:
  - name: http
    port: 4000
  - name: epmd
    port: 4369
