k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: liquid-voting-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/acme-http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
spec:
  rules:
  - host: liquidvoting.io
    http:
      paths:
        - path: /
          backend:
            serviceName: liquid-voting-service
            servicePort: 4000
  tls:
    - hosts:
      - liquidvoting.io
      secretName: liquid-voting-tls
